buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/maven' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'maven-publish'

version = mod_version
group = mod_group_id
archivesBaseName = mod_name.replace(' ', '')

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + ' (' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

minecraft {
    mappings channel: project.mapping_channel, version: project.mapping_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                advanced_ae { source sourceSets.main }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                advanced_ae { source sourceSets.main }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            forceExit false
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            mods {
                advanced_ae { source sourceSets.main }
            }
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '.cache/'
}

repositories {
    mavenCentral()
    maven { url = 'https://www.cursemaven.com' }
    maven { url = 'https://modmaven.dev/' }
    maven { url = 'https://dvs1.progwml6.com/files/maven/' }
    maven { url = 'https://repo.spongepowered.org/maven' }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation fg.deobf('curse.maven:applied-energistics-2-223794:3608871')

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

Map<String, String> expansionVariables = [
        minecraft_version      : minecraft_version,
        minecraft_version_range: minecraft_version_range,
        forge_version          : forge_version,
        forge_version_range    : forge_version_range,
        loader_version_range   : loader_version_range,
        mod_id                 : mod_id,
        mod_name               : mod_name,
        mod_license            : mod_license,
        mod_version            : mod_version,
        mod_authors            : mod_authors,
        mod_description        : mod_description
]

processResources {
    inputs.properties expansionVariables
    filesMatching('META-INF/mods.toml') {
        expand expansionVariables
    }
}

mixin {
    add sourceSets.main, 'mixins.aae.refmap.json'
    config 'mixins.aae.json'
}

jar {
    manifest {
        attributes([
                'Specification-Title'      : mod_name,
                'Specification-Vendor'     : mod_authors,
                'Specification-Version'    : '1',
                'Implementation-Title'     : project.name,
                'Implementation-Version'   : project.version,
                'Implementation-Vendor'    : mod_authors,
                'Implementation-Timestamp' : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'             : 'mixins.aae.json'
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven { url "file://${project.projectDir}/mcmodsrepo" }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
